--- a/style.css
+++ b/style.css
@@ -71,3 +71,27 @@ gap: 60px;
 opacity: 0px;
 margin-top: 50px;
 }
+.p10{
+    font-family: Inter;
+font-size: 14px;
+font-weight: 400;
+line-height: 23px;
+text-align: center;
+
+}
+.p11{
+    font-family: Inter;
+font-size: 28px;
+font-weight: 600;
+line-height: 33.89px;
+text-align: left;
+text-align: center;
+}
+.div11{
+    width: 1365px;
+    height: 60px;
+    background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
